<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_landscape"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:id="@+id/registerErrorLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lastNameRegisterLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/registerErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textStyle="italic"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastNameRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/nameRegisterLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/lastNameRegister"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:background="@drawable/input_field_left"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/emailRegLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/nameRegister"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:background="@drawable/input_field_left"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailRegLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50">

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegLayout">

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:background="@drawable/input_field_right"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmPasswordRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterLayout">

        <EditText
            android:id="@+id/confirmPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:background="@drawable/input_field_right"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/registerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterLayout">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="1.5"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:onClick="register"
            android:background="@drawable/right_button"
            android:text="@string/signup"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TextView
            android:id="@+id/already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:onClick="goLogin"
            android:text="@string/signin"
            android:textColor="@color/pink"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>